Values overridden and configmap added

--- a/couponservicechart/values.yaml
+++ b/couponservicechart/values.yaml
@@ -98,3 +98,15 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+mysql:
+  auth:
+    rootPassword: test1234
+    database: mydb
+  primary:
+    service:
+      type: NodePort
+      nodePort: 32762
+  fullnameOverride: docker-mysql
+  initdbScriptsConfigMap: mysql-initdb-config
+    
